[gd_scene load_steps=13 format=3 uid="uid://bkkqoqks88kpb"]

[ext_resource type="Material" path="res://Floor.tres" id="1"]
[ext_resource type="ArrayMesh" uid="uid://0bw8tfnscnrh" path="res://Floor.obj" id="2"]
[ext_resource type="Script" path="res://Cell.gd" id="3"]
[ext_resource type="ArrayMesh" uid="uid://b8l8b3ahxjuv3" path="res://Wall.obj" id="4"]
[ext_resource type="Material" path="res://Wall.tres" id="4_pvcxg"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_psc7g"]
data = PackedVector3Array(-1, 0, -1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, -1, 1, 0, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_a14aw"]
data = PackedVector3Array(-1, 0, -1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, -1, 1, 0, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_c5usr"]
data = PackedVector3Array(-1, 0, -1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, -1, 1, 0, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_5fdg6"]
data = PackedVector3Array(-1, 0, -1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, -1, 1, 0, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_wb0uy"]
data = PackedVector3Array(-1, 0, -1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, -1, 1, 0, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2slg4"]
data = PackedVector3Array(-1, 0, -1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, -1, 1, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_uwxbl"]

[node name="Cell" type="Area3D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("3")

[node name="TopFace" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 2, 0)
mesh = ExtResource("2")
surface_material_override/0 = ExtResource("1")

[node name="StaticBody3D" type="StaticBody3D" parent="TopFace"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TopFace/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_psc7g")

[node name="NorthFace" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 4.37114e-08, -4.37114e-08, -4.37114e-08, 4.37114e-08, 1, 4.37114e-08, 1, -4.37114e-08, 0, 1, -1)
mesh = ExtResource("4")
surface_material_override/0 = ExtResource("4_pvcxg")

[node name="StaticBody3D" type="StaticBody3D" parent="NorthFace"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NorthFace/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_a14aw")

[node name="EastFace" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, 1, -1, 4.37114e-08, -4.37114e-08, 1, 1, 0)
mesh = ExtResource("4")
surface_material_override/0 = ExtResource("4_pvcxg")

[node name="StaticBody3D" type="StaticBody3D" parent="EastFace"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="EastFace/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_c5usr")

[node name="SouthFace" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -4.37114e-08, 4.37114e-08, -4.37114e-08, 1.31134e-07, 1, -4.37114e-08, -1, 1.31134e-07, 0, 1, 1)
mesh = ExtResource("4")
surface_material_override/0 = ExtResource("4_pvcxg")

[node name="StaticBody3D" type="StaticBody3D" parent="SouthFace"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SouthFace/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5fdg6")

[node name="WestFace" type="MeshInstance3D" parent="."]
transform = Transform3D(4.37114e-08, 1, -8.74228e-08, -4.37114e-08, 8.74228e-08, 1, 1, -4.37114e-08, 4.37114e-08, -1, 1, 0)
mesh = ExtResource("4")
surface_material_override/0 = ExtResource("4_pvcxg")

[node name="StaticBody3D" type="StaticBody3D" parent="WestFace"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="WestFace/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_wb0uy")

[node name="BottomFace" type="MeshInstance3D" parent="."]
mesh = ExtResource("2")
surface_material_override/0 = ExtResource("1")

[node name="StaticBody3D" type="StaticBody3D" parent="BottomFace"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BottomFace/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_2slg4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.912962, 0)
shape = SubResource("BoxShape3D_uwxbl")
